# perspective_grasp

./: .dockerignore  .env.live  .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.yml
bundlesdf_unknown_tracker/: package.xml  setup.cfg
bundlesdf_unknown_tracker/launch/: bundlesdf.launch.py
config/: camera_config.yaml  camera_config_2cam.yaml
cosypose_scene_optimizer/: setup.py
cosypose_scene_optimizer/config/: cosypose_params.yaml
cosypose_scene_optimizer/cosypose_scene_optimizer/: cosypose_node.py
cross_camera_associator/: README.md
cross_camera_associator/include/cross_camera_associator/: associator_node.hpp
cross_camera_associator/launch/: associator.launch.py
cross_camera_associator/src/: camera_pose_buffer.cpp  hungarian_solver.cpp
cross_camera_associator/test/: test_global_id_manager.cpp
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  requirements-bundlesdf.txt  requirements-cosypose.txt  requirements-foundationpose.txt  requirements-sam2.txt  tag.sh
docs/: architecture.md  build.md  debugging.md  installation.md  live_gpu_phase0_prep.md  model_assets.md  running.md
grasp_pose_planner/: HOW_TO_ADD_PLANNER.md  README.md  package.xml  setup.cfg
grasp_pose_planner/config/: grasp_planner_params.yaml
grasp_pose_planner/grasp_pose_planner/: grasp_planner_node.py
grasp_pose_planner/grasp_pose_planner/planners/: base_planner.py
grasp_pose_planner/launch/: grasp_planner.launch.py
isaac_foundationpose_tracker/: package.xml  setup.cfg
isaac_foundationpose_tracker/config/: foundationpose_params.yaml
isaac_foundationpose_tracker/isaac_foundationpose_tracker/: foundationpose_node.py
megapose_ros2_wrapper/: README.md  setup.py
megapose_ros2_wrapper/launch/: megapose.launch.py
megapose_ros2_wrapper/megapose_ros2_wrapper/: megapose_node.py
multi_camera_calibration/config/: calibration_params.yaml
multi_camera_calibration/include/multi_camera_calibration/: charuco_detector.hpp  hand_eye_solver.hpp
multi_camera_calibration/scripts/: generate_static_tf_launch.py
multi_camera_calibration/src/: charuco_detector.cpp  hand_eye_solver.cpp  joint_optimizer.cpp
pcl_merge_node/include/pcl_merge_node/: merge_node.hpp
pcl_merge_node/launch/: merge.launch.py
pcl_merge_node/src/: merge_node.cpp  overlap_filter.cpp
pcl_merge_node/test/: test_cloud_merger.cpp  test_overlap_filter.cpp
perception_debug_visualizer/: CMakeLists.txt
perception_debug_visualizer/config/: visualizer_params.yaml
perception_debug_visualizer/include/perception_debug_visualizer/: visualizer_node.hpp
perception_debug_visualizer/launch/: debug_visualizer.launch.py
perception_debug_visualizer/src/: visualizer_node.cpp
perception_meta_controller/: CMakeLists.txt  package.xml
perception_meta_controller/config/: meta_controller_params.yaml
perception_msgs/action/: PlanGrasp.action
perception_msgs/msg/: AssociatedPose.msg  AssociatedPoseArray.msg  ObjectRelation.msg  PoseCovarianceArray.msg  PoseWithMetaArray.msg  Segmentation.msg  SegmentationArray.msg
perception_msgs/srv/: SetMode.srv
pose_filter_cpp/: CMakeLists.txt
pose_filter_cpp/config/: filter_params.yaml
pose_filter_cpp/launch/: pose_filter.launch.py
pose_filter_cpp/src/: pose_filter_node.cpp
pose_filter_cpp/test/: test_iekf_se3.cpp
pose_graph_smoother/include/pose_graph_smoother/: smoother_node.hpp
pose_graph_smoother/src/: smoother_node.cpp
sam2_instance_segmentor/: README.md  package.xml
sam2_instance_segmentor/launch/: sam2_segmentor.launch.py
scripts/: _deps_common.sh  _venv.sh  install_dependencies.sh  install_host.sh  install_realsense.sh  requirements-host.txt
teaser_icp_hybrid_registrator/: CMakeLists.txt  package.xml
yolo_pcl_cpp_tracker/: package.xml
yolo_pcl_cpp_tracker/include/yolo_pcl_cpp_tracker/: cad_model_manager.hpp  pcl_icp_pose_estimator.hpp
yolo_pcl_cpp_tracker/scripts/: yolo_byte_tracker.py
yolo_pcl_cpp_tracker/src/: cad_model_manager.cpp
