<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teaser_icp_hybrid_registrator</name>
  <version>0.1.0</version>
  <description>TEASER++ global registration + PCL ICP local refinement hybrid library</description>
  <maintainer email="hyujun@todo.todo">hyujun</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
